--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
     "daisyui": "^4.12.23",
+    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
+    "serve": "^14.2.4",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
@@ -25,7 +29,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "serve": "serve -s dist"
   }
 }
