--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "dev": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "start": "serve dist"
+    "start": "serve dist",
+    "vercel-build": "webpack --mode production && cp -r public/assets dist/assets"
   }
 }
