--- a/vercel.json
+++ b/vercel.json
@@ -5,18 +5,23 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run vercel-build"
       }
     }
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
+      "src": "^/assets/(.*)",
       "dest": "/assets/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "src": "^/(.*)\\.(js|css|ico|jpg|jpeg|png|gif|webp|eot|otf|ttf|woff|woff2)$",
+      "dest": "/$1.$2"
+    },
+    {
+      "src": ".*",
+      "dest": "/index.html"
     }
   ]
 }
