--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "dev": "webpack serve --mode development --open",
     "build": "webpack --mode production",
     "start": "serve dist",
-    "vercel-build": "webpack --mode production && cp -r public/assets dist/assets"
+    "vercel-build": "webpack --mode production"
   }
 }
