--- a/vercel.json
+++ b/vercel.json
@@ -5,21 +5,22 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run vercel-build"
       }
     }
   ],
   "routes": [
     {
-      "src": "^/assets/(.*)",
+      "src": "/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "dest": "/assets/$1"
     },
     {
-      "src": "^/(.*)\\.(js|css|ico|jpg|jpeg|png|gif|webp|eot|otf|ttf|woff|woff2)$",
-      "dest": "/$1.$2"
+      "handle": "filesystem"
     },
     {
-      "src": ".*",
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
